[package]
name = "scan-ip"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#futures = "0.3.5" and_then not work
futures = "0.1"
#tokio = "0.2.22"
tokio = "0.1"
tokio-ping = "0.3.0"
